# plane-spotter

./: .dockerignore  .gitignore  README.md  env.sh  mypy.ini  pyproject.toml  run_tests.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-app.yml
config/: notify.yaml
config/adsb_backend/: adsbexchange.yaml
config/notification_backend/: twitter.yaml  twitter_api.yaml  twitter_selenium.yaml
docker/: Dockerfile  docker-entrypoint.sh
plane_spotter/: adsb.py  geolocator.py  notification.py  package.py  selenium.py  twitter.py
plane_spotter/adsb/: adsb.py  adsb_exchange.py
plane_spotter/scripts/: notify.py
tests/: conftest.py  test_geolocator.py
tests/scripts/: test_notify.py
